--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ button:hover { background: #4caf50; }
 </head>
 <body>
 <div id="gameContainer">
-  <h1>🧠</h1>
+  <h1>🧠 BrainTrials</h1>
   <button onclick="startWordChain()">START</button>
 </div>
 <script>
@@ -70,7 +70,7 @@ function startWordChain(){
   const container=document.getElementById('gameContainer');
   container.innerHTML=`
     <h1></h1>
-    <div id="wordDisplay">Apple</div>
+    <div id="wordDisplay">Start word: Apple</div>
     <div id="inputContainer">
       <input type="text" id="playerWord" placeholder="Type your word here" autocomplete="off" autocapitalize="none">
       <button onclick="playWord()">OK</button>
@@ -116,7 +116,7 @@ function startTicTacToe(){
   const container=document.getElementById('gameContainer');
   container.innerHTML=`
     <h1></h1>
-    <div id="board"></div>
+    <div id="boardWrapper"><div id="board"></div></div>
     <div id="timer">⏳ Time left: 6</div>
     <div id="message"></div>
     <div id="scoreboard">Player: 0 | AI: 0 | Draws: 0</div>
@@ -128,35 +128,7 @@ function startTicTacToe(){
         <option value="hard">Hard</option>
       </select>
     </div>
-    `;
-  
-    #board {
-  display: grid;
-  grid-template-columns: repeat(3, 150px);
-  grid-template-rows: repeat(3, 150px);
-  gap: 10px;
-  margin: 0 auto;
-}
-
-.cell {
-  width: 150px;
-  height: 150px;
-  font-size: 72px;
-  border-radius: 12px;
-}
-
-@media (max-width: 600px) {
-  #board {
-    grid-template-columns: repeat(3, 100px);
-    grid-template-rows: repeat(3, 100px);
-  }
-  .cell {
-    width: 100px;
-    height: 100px;
-    font-size: 48px;
-  }
-}
-
+  `;
   board=['','','','','','','','','']; ticScore={player:0,ai:0,draw:0}; gameOver=false; renderBoard(); startTimer();
 }
 
@@ -209,7 +181,7 @@ function startChromaticTrial(){
   stage='chromatic';
   const container=document.getElementById('gameContainer');
   container.innerHTML=`
-    <h1></h1>
+    <h1>🌈 Chromatic Trial</h1>
     <div id="grid"></div>
     <div id="timer">⏳ Time left: 60</div>
   `;
@@ -257,7 +229,7 @@ function checkWin(){
   if(allGoal && !solved){
     solved = true;
     clearInterval(chromaticTimerInterval);
-    alert("🎉");
+    alert("🎉 Herzlichen Glückwunsch!\nDu hast die Geheimfarbe gefunden!");
     setTimeout(restartGame, 500);
   }
 }
@@ -305,7 +277,7 @@ function restartGame(){
 
   const container = document.getElementById('gameContainer');
   container.innerHTML = `
-    <h1>🧠</h1>
+    <h1>🧠 BrainTrials</h1>
     <button onclick="startWordChain()">START</button>
   `;
 
