--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body {
   width: 90%; max-width: 700px; min-height: 520px;
   padding: 20px; background: #000; border-radius: 15px;
   box-shadow: 0 0 25px rgba(255,255,255,0.08);
-  display: flex; flex-direction: column; align-items: center; justify-content: center;
+  display: flex; flex-direction: column; align-items: center; justify-content: flex-start;
 }
 h1 { font-size: 1.8em; margin-bottom: 20px; color: #4dd0e1; font-family: 'Press Start 2P', cursive; }
 #task, #wordDisplay { font-size: 1.4em; margin: 20px 0; min-height: 50px; font-family: 'Press Start 2P', cursive; word-break: keep-all; }
