--- a/index.html
+++ b/index.html
@@ -5,14 +5,7 @@
 <title>🧠 BrainTrials + Chromatic Trial</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-<style>/* ✅ TicTacToe Original-Größe fixieren */
-#boardWrapper {
-  width: 470px;
-  height: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+<style>
 html, body { height: 100%; margin: 0; }
 body {
   display: grid; place-items: center;
@@ -23,7 +16,7 @@ body {
   width: 90%; max-width: 700px; min-height: 520px;
   padding: 20px; background: #000; border-radius: 15px;
   box-shadow: 0 0 25px rgba(255,255,255,0.08);
-  display: flex; flex-direction: column; align-items: center; justify-content: flex-start;
+  display: flex; flex-direction: column; align-items: center; justify-content: center;
 }
 h1 { font-size: 1.8em; margin-bottom: 20px; color: #4dd0e1; font-family: 'Press Start 2P', cursive; }
 #task, #wordDisplay { font-size: 1.4em; margin: 20px 0; min-height: 50px; font-family: 'Press Start 2P', cursive; word-break: keep-all; }
@@ -37,6 +30,7 @@ button:hover { background: #4caf50; }
 .timer-yellow { color: #ffc107; }
 .timer-red { color: #f44336; }
 
+#boardWrapper { display: flex; align-items: center; justify-content: center; width: 100%; }
 #board { display: grid; grid-template-columns: repeat(3, 150px); grid-template-rows: repeat(3, 150px); gap: 10px; }
 .cell { width:150px; height:150px; display:flex; align-items:center; justify-content:center; font-size:72px; cursor:pointer; transition:all 0.3s; color:white; font-weight:bold; border-radius:12px; }
 .cell:hover { transform:scale(1.05); filter: brightness(1.2); }
