--- a/index.html
+++ b/index.html
@@ -175,7 +175,26 @@ function checkMathAnswer(){const input=document.getElementById('answer'); if(inp
 // ==========================
 // CHROMATIC TRIAL
 // ==========================
-const colorsCT=["#e57373","#64b5f6","#81c784","#f44336","#fff176","#ba68c8"];
+const colorsCT=[
+  "#e57373","#64b5f6","#81c784","#fff176","#ba68c8",
+
+  "#f44336","#e53935","#d32f2f","#c62828",
+  "#ff5722","#ff7043","#ff8a65",
+  "#ff9800","#ffb74d","#ffcc80",
+  "#ffc107","#ffeb3b",
+  "#cddc39","#aed581",
+  "#8bc34a","#66bb6a",
+  "#4caf50","#43a047",
+  "#009688","#26a69a",
+  "#00bcd4","#4dd0e1",
+  "#03a9f4","#2196f3","#1e88e5",
+  "#3f51b5","#5c6bc0",
+  "#673ab7","#7e57c2",
+  "#9c27b0","#ab47bc",
+  "#e91e63","#f06292",
+  "#795548","#8d6e63",
+  "#607d8b","#78909c"
+];
 const CHROMATIC_GOAL="#ba68c8"; 
 let tilesCT=[], chromaticTime=60, chromaticTimerInterval, uniformTimeout=null, solved=false;
 
