--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>🧠</title>
+<title></title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 <style>
@@ -92,7 +92,7 @@ button:hover { background: #4caf50; }
 </head>
 <body>
 <div id="gameContainer">
-  <h1>🧠</h1>
+  <h1></h1>
   <button onclick="startWordChain()">START</button>
 </div>
   <!-- Tip Button -->
@@ -353,7 +353,7 @@ function restartGame(){
 
   const container = document.getElementById('gameContainer');
   container.innerHTML = `
-    <h1>🧠</h1>
+    <h1></h1>
     <button onclick="startWordChain()">START</button>
   `;
 
