--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ function startMathChallenge(){
       <input id="answer" type="number" placeholder="Your answer" autofocus>
       <button onclick="checkMathAnswer()">OK</button>
     </div>
-    <div id="timer">⏳ Time left: 30</div>
+    <div id="timer"></div>
     <div id="message"></div>
   `;
   mathTimer=30; generateMathTask(); startMathTimer();
