--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@ function showChromaticMessage(){
   var text = document.getElementById('chromaticText');
   if(!text) return;
 
-  text.textContent = "Hallo 👀 hast du deine Farbe gefunden?";
+  text.textContent = "Hello 👀 have you found the color?";
   text.style.opacity = "1";
 
   setTimeout(function(){
