--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@ function showChromaticMessage(){
   var text = document.getElementById('chromaticText');
   if(!text) return;
 
-  text.textContent = "Find the right color❗️";
+  text.textContent = " Find the right color";
   text.style.opacity = "1";
 
   setTimeout(function(){
